# SnekQuiz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yaml
src/snekquiz/: __init__.py  __main__.py  auth.py  database.py  models.py  routes.py
src/snekquiz/config/: app.yaml  logging.yaml
src/snekquiz/static/: style.css
src/snekquiz/templates/: base.html  complete.html  home.html  question.html  results.html
src/snekquiz/templates/admin/: attempt_detail.html  dashboard.html  quiz_detail.html  upload.html
src/snekquiz/templates/partials/: answer_feedback.html
tests/: conftest.py  sample.json  test_database_progress.py  test_routes_progress.py
