[project]
name = "snekquiz"
version = "0.3.0"
description = "A minimalist MCQ quiz web application"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "AC", email = "ac3673.kc7hq@simplelogin.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Education",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "aiosqlite>=0.21.0",
    "ldap3>=2.9",
]

[project.urls]
Homepage = "https://github.com/ac3673/snekquiz"
Repository = "https://github.com/ac3673/snekquiz"
Issues = "https://github.com/ac3673/snekquiz/issues"

[project.scripts]
snekquiz = "snekquiz:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "LOG",    # flake8-logging
    "ASYNC",  # flake8-async
]
ignore = [
    "S104",   # binding to all interfaces
    "S105",   # hardcoded password in config defaults
    "TC001",  # typing-only-first-party-import
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["snekquiz"]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["snekquiz"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "ruff>=0.15.2",
    "ty>=0.0.18",
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "genbadge[coverage]>=1.1",
    "httpx>=0.27",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
tag_format = "v$version"
update_changelog_on_bump = true
